axum-myroutes/tests/ui/fail_route_attr_no_path.stderr
error: expected route path as the first argument
  --> tests/ui/fail_route_attr_no_path.rs:13:11
   |
13 |     #[get(handler = _handler)]
   |           ^^^^^^^
